using System.Collections;
using System.Collections.Generic;
using UnityEngine;

    public class AnimationTags
    {
        public const string MOVEMENT = "Movement";

        public const string PUNCH_TRIGGER = "Punch";
        public const string KICK_TRIGGER = "Kick";

        public const string IDLE_ANIMATION = "idle";
        public const string JUMP_TRIGGER = "Jump";


    public class Axis
        {
            public const string HORIZONTAL_AXIS = "Horizontal";
            public const string VERTICAL_AXIS = "Vertical";
        }

    }
   
