using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string MOVEMENT = "Movement";
    public const string hit1 = "gethit1";

    public const string PUNCH_TRIGGER = "Punch";
    public const string PUNCH2_TRIGGER = "Punch_2";
    public const string PUNCH3_TRIGGER = "Punch_3";

    public const string KICK_TRIGGER = "Kick";
    public const string KICK2_TRIGGER = "Kick_2";
    public const string KICK3_TRIGGER = "Kick_3";

    public const string IDLE_ANIMATION = "idle";
    public const string JUMP_TRIGGER = "Jump";
    public const string GUARD_TRIGGER = "guard";
    public const string DIE_TRIGGER = "die";

    public class Axis
    {
        public const string HORIZONTAL_AXIS = "Horizontal";
        public const string VERTICAL_AXIS = "Vertical";
    }
}
